construí a segunda divisao do site

--- a/index.html
+++ b/index.html
@@ -12,11 +12,26 @@
 <div id="menusuperior">
     <h1 id="titulosuperior">Tradição em projetos de arquitetura</h1>
 
-<br>
+
 
     <p id="titulosecundario">Arquitetura residencial e comercial. </p>
     </div>
 
+<!--MENU INFORMACIONAL-->
+
+    <div class="b" id="menuinformacional">
+
+       <div class="2b"> <p class="texto-informativo1"> 850 <br>
+        <p class="texto-informativo">  empreendimentos construídos </p></div>
+
+            <div class="2b"> <p class="texto-informativo1">40<br>
+                <p class="texto-informativo"> anos de mercado e experiência </p></div>
+                
+                <div class="2b"> <p class="texto-informativo1"> 2,000,000<br>
+                    <p class="texto-informativo">  m² em projetos construídos </p>    </div>                
+
+
+    </main>
 
 
 
