Reformei as linhas de codigo
Dessa vez fui aprendendo mais sobre as tags de display e como organizar o conteúdo do site.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <!--MENU SUPERIOR-->
 
 <div id="menusuperior">
+
     <h1 id="titulosuperior">Tradição em projetos de arquitetura</h1>
 
 
@@ -19,19 +20,19 @@
 
 <!--MENU INFORMACIONAL-->
 
-    <div class="b" id="menuinformacional">
+    <div class="menuinformacional">
+        
+        <div id="texto-informativo1"> 850   </div>
+        <div id="texto-informativo2">  empreendimentos construídos </div> 
+        <div id="texto-informativo3">40</div> 
+        <div id="texto-informativo4"> anos de mercado e experiência</div>   
+        <div id="texto-informativo5"> 2,000,000</div> 
+        <div id="texto-informativo6">  m² em projetos construídos </div>    
+   
+     </div>                
 
-       <div class="2b"> <p class="texto-informativo1"> 850 <br>
-        <p class="texto-informativo">  empreendimentos construídos </p></div>
 
-            <div class="2b"> <p class="texto-informativo1">40<br>
-                <p class="texto-informativo"> anos de mercado e experiência </p></div>
-                
-                <div class="2b"> <p class="texto-informativo1"> 2,000,000<br>
-                    <p class="texto-informativo">  m² em projetos construídos </p>    </div>                
-
-
-    </main>
+   
 
 
 
